--- a/package.json
+++ b/package.json
@@ -9,22 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.71.0",
-    "@react-three/fiber": "^8.13.0",
+    "@headlessui/react": "^1.7.17",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@react-spring/three": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
+    "@react-three/drei": "^9.88.11",
+    "@react-three/fiber": "^8.15.9",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@types/three": "^0.152.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
+    "eslint-config-next": "14.0.1",
+    "maath": "^0.10.4",
+    "next": "14.0.1",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "three": "^0.153.0",
+    "three-conic-polygon-geometry": "^1.6.1",
+    "three-stdlib": "^2.28.5",
+    "tiny-invariant": "^1.3.1",
     "typescript": "5.1.3",
-    "zustand": "^4.3.8"
+    "zustand": "^4.4.6"
   }
 }
