--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-spring/three": "^9.7.3",
     "@react-spring/web": "^9.7.3",
-    "@react-three/drei": "^9.88.11",
+    "@react-three/drei": "^9.88.16",
     "@react-three/fiber": "^8.15.9",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
