--- a/package.json
+++ b/package.json
@@ -1,43 +1,68 @@
 {
-  "name": "bioranges",
-  "version": "0.1.0",
+  "name": "ranges-remix",
   "private": true,
+  "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "react-router build",
+    "dev": "react-router dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@react-router/dev": "^7.0.2",
+    "@react-router/fs-routes": "^7.0.2",
+    "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.0.0",
     "@react-spring/three": "^9.7.3",
     "@react-spring/web": "^9.7.3",
-    "@react-three/drei": "^9.88.16",
-    "@react-three/fiber": "^8.15.9",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
-    "@types/three": "^0.152.1",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.16.6",
+    "@remix-run/eslint-config": "^2.9.2",
+    "@types/geojson": "^7946.0.14",
+    "@types/lodash": "^4.17.4",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.164.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "@uidotdev/usehooks": "^2.4.1",
-    "autoprefixer": "10.4.14",
-    "classnames": "^2.3.2",
-    "eslint": "8.42.0",
-    "eslint-config-next": "14.0.1",
-    "maath": "^0.10.4",
-    "next": "14.0.1",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "three": "^0.153.0",
-    "three-conic-polygon-geometry": "^1.6.1",
-    "three-stdlib": "^2.28.5",
-    "tiny-invariant": "^1.3.1",
-    "typescript": "5.1.3",
-    "zustand": "^4.4.6"
+    "autoprefixer": "^10.4.19",
+    "camera-controls": "^2.8.3",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "geojson": "^0.5.0",
+    "isbot": "^4.1.0",
+    "lodash": "^4.17.21",
+    "maath": "^0.10.7",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^7.0.2",
+    "simplify-geojson": "^1.0.5",
+    "tailwindcss": "^3.4.3",
+    "three": "^0.164.1",
+    "three-conic-polygon-geometry": "^1.6.3",
+    "three-stdlib": "^2.30.0",
+    "tiny-invariant": "^1.3.3",
+    "ts-pattern": "^5.1.1",
+    "tunnel-rat": "^0.1.2",
+    "typescript": "^5.1.6",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "zustand": "^4.5.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
