playing around with wikipedia and info panel

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1",
+    "wikipedia": "^2.1.2",
     "zustand": "^4.5.2"
   },
   "engines": {
