--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
+    "format": "prettier --write .",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
@@ -61,6 +62,7 @@
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1",
     "wikipedia": "^2.1.2",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "engines": {
