--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@remix-run/eslint-config": "^2.9.2",
     "@types/geojson": "^7946.0.14",
     "@types/lodash": "^4.17.4",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.164.1",
