--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["@react-router/node", "vite/client"],
     "rootDirs": [".", "./.react-router/types"],
+    "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
